--- a/src/test/resources/config/Configuration.properties
+++ b/src/test/resources/config/Configuration.properties
@@ -1,8 +1,8 @@
 driverPath = 
 implicitWait = 20
-url = 
+url = http://www.automationpractice.pl/index.php
 urlExcel = 
 environment = local
 browser = chrome
-versionChrome =  
+versionChrome = 122.0.6261.95
 windowMaximize = true
